Fixing navigation breaks in pages

--- a/assets/less/reece-bathrooms.less
+++ b/assets/less/reece-bathrooms.less
@@ -76,9 +76,7 @@
     // Main Header Module
     //====================================================================================================================================
     //====================================================================================================================================
-    body{
-        padding-top: 233px;
-    }
+
     .main-header {
         padding-top: 20px;
         background-color: @hzPrimary;
@@ -1192,7 +1190,6 @@ RESPONSIVE OVERRIDES
     position: relative;
     overflow: hidden;
     text-align: center;
-    margin-top: -10px;
     .inspirationBannerImageWrap{
         overflow: hidden;
         img{
