--- a/assets/less/reece-global.less
+++ b/assets/less/reece-global.less
@@ -326,7 +326,7 @@ margin: 0 0 0 12px;
     color: #ccc;
     text-shadow: none;
     padding:15px 8px;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 200;
     letter-spacing: 1px;
 }
